# volume-viewer-imgui

./: .clang-format  LICENSE  README.md  main.cpp  meson.build
components/: click_counter.hpp  image_viewer.hpp  volume_viewer.hpp
data_models/: frame2d.cpp  frame2d.h  frame3d.cpp  frame3d.h  image.hpp  meson.build  types.hpp  volume.hpp
nifti-reader/: meson.build  nifti-reader.cpp  nifti-reader.h
subprojects/: freeglut.wrap
view_models/: frame2d.cpp  frame2d.h  frame3d.cpp  frame3d.h  scale.hpp
vx/: meson.build  palette.h  tex3d.h  vx.c
