frame2d_dep = declare_dependency(
    sources: 'frame2d.cpp',
    include_directories: data_models_inc,
    dependencies: [
        dependency('glfw3'),
    ],
)

frame3d_dep = declare_dependency(
    sources: 'frame3d.cpp',
    include_directories: data_models_inc,
    dependencies: [
        dependency('glfw3'),
    ],
)